比對完 genus-family 的部分
1. 增加幾個 HAST 中沒有的科
2. 輸出
   a. hast_checked_genus.csv (已確認過的屬)
   b. hast_questionable_genus.csv
   (有問題的屬，包含無效、非法的學名，以及查不到的）
   c. hast_families.csv (所有的科，包含 APG IV 新增的科)

--- a/sql/Makefile
+++ b/sql/Makefile
@@ -1,9 +1,24 @@
 PGSQL=psql
 DATABASE=nvdimp
 
+init:
+	${PGSQL} -d ${DATABASE} -c "CREATE SCHEMA nomenclature;"
+
 import:
 	${PGSQL} -d ${DATABASE} -f createHastDB_ddl.sql 
 	${PGSQL} -d ${DATABASE} -f hastFamilies.sql
 	${PGSQL} -d ${DATABASE} -f hastGenus.sql
 	${PGSQL} -d ${DATABASE} -f hastSpecies.sql
 	${PGSQL} -d ${DATABASE} -f hastGenus_tropicos.sql
+
+update:
+	${PGSQL} -d ${DATABASE} -f updateAPGIV.sql 
+
+vacuum:
+	${PGSQL} -d ${DATABASE} -f hastVacuum.sql
+
+export:
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_questionable_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_questionable_genus.csv' WITH CSV HEADER";
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_checked_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_checked_genus.csv' WITH CSV HEADER";
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_families order by hast_family_id) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_families.csv' WITH CSV HEADER;"
+
