增加物種的輸出
1. 已經更新物種和屬的對照(hast_species.csv)，但物種學名的正確性尚未確認
2. 修正輸出 csv 的分隔（本來是逗號，現在改成 Tab)

--- a/sql/Makefile
+++ b/sql/Makefile
@@ -18,7 +18,8 @@ vacuum:
 	${PGSQL} -d ${DATABASE} -f hastVacuum.sql
 
 export:
-	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_questionable_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_questionable_genus.csv' WITH CSV HEADER";
-	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_checked_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_checked_genus.csv' WITH CSV HEADER";
-	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_families order by hast_family_id) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_families.csv' WITH CSV HEADER;"
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_questionable_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_questionable_genus.csv' WITH CSV HEADER DELIMITER '	';"
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_checked_genus) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_checked_genus.csv' WITH CSV HEADER DELIMITER '	' ;"
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT * from nomenclature.hast_families order by hast_family_id) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_families.csv' WITH CSV HEADER DELIMITER '	';"
+	${PGSQL} -d ${DATABASE} -c "COPY (SELECT hast_species_id,hast_genus_id,genus,name,\"vernacularName\" from nomenclature.hast_species) TO '/Users/psilotum/Documents/Dropbox/projects/2016_HAST/checked/hast_species.csv' WITH CSV HEADER DELIMITER '	';"
 
